<resources>
    <string name="app_name">weather-app</string>
    <string name="load_weather">Load Weather</string>
    <string name="weather_app">Weather App</string>
    <string name="city">City</string>
    <string name="api_key">USE YOR OWN!</string>
    <string name="ru">Русский</string>
    <string name="en">English</string>
    <string name="description">Description:</string>
    <string name="temperature">Temperature:</string>
    <string name="feels_like">Feels Like:</string>
    <string name="day_len">Day Len</string>
    <string name="weather">Weather:</string>
    <string-array name="cities">
        <item>Irkutsk</item>
        <item>Angarsk</item>
        <item>Moscow</item>
        <item>Berlin</item>
    </string-array>
</resources>
